--- a/omnicell/notebooks/deepmind/Satija_CoScientist_Splits_TASK1.ipynb
+++ b/omnicell/notebooks/deepmind/Satija_CoScientist_Splits_TASK1.ipynb
@@ -23,9 +23,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored in: <bound method IPythonKernel._clean_thread_parent_frames of <ipykernel.ipkernel.IPythonKernel object at 0x2aaab517eb20>>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/orcd/data/omarabu/001/opitcho/miniforge3/envs/omnicell/lib/python3.9/site-packages/ipykernel/ipkernel.py\", line 775, in _clean_thread_parent_frames\n",
+      "    def _clean_thread_parent_frames(\n",
+      "KeyboardInterrupt: \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored in: <bound method IPythonKernel._clean_thread_parent_frames of <ipykernel.ipkernel.IPythonKernel object at 0x2aaab517eb20>>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/orcd/data/omarabu/001/opitcho/miniforge3/envs/omnicell/lib/python3.9/site-packages/ipykernel/ipkernel.py\", line 775, in _clean_thread_parent_frames\n",
+      "    def _clean_thread_parent_frames(\n",
+      "KeyboardInterrupt: \n"
+     ]
+    }
+   ],
    "source": [
     "DEGs = json.load(open(DEGs_PATH))\n",
     "\n",
@@ -37,78 +60,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'ADAR': 1001.6666666666666,\n",
-       " 'AKT1': 70.0,\n",
-       " 'BATF2': 69.5,\n",
-       " 'BRD9': 71.33333333333333,\n",
-       " 'CEBPB': 289.0,\n",
-       " 'CEBPG': 195.16666666666666,\n",
-       " 'CRKL': 45.833333333333336,\n",
-       " 'DRAP1': 427.1666666666667,\n",
-       " 'DTX3L': 76.66666666666667,\n",
-       " 'ELK1': 150.16666666666666,\n",
-       " 'ETS1': 157.5,\n",
-       " 'ETS2': 155.16666666666666,\n",
-       " 'FOS': 28.0,\n",
-       " 'H1F0': 96.66666666666667,\n",
-       " 'HERC5': 138.5,\n",
-       " 'HERC6': 135.66666666666666,\n",
-       " 'HES4': 129.66666666666666,\n",
-       " 'ID1': 378.0,\n",
-       " 'ID2': 366.1666666666667,\n",
-       " 'ID3': 50.666666666666664,\n",
-       " 'IFI16': 118.5,\n",
-       " 'IFNAR1': 616.1666666666666,\n",
-       " 'IFNAR2': 1233.0,\n",
-       " 'IRF1': 283.8333333333333,\n",
-       " 'IRF3': 73.83333333333333,\n",
-       " 'IRF7': 122.66666666666667,\n",
-       " 'IRF9': 205.0,\n",
-       " 'JAK1': 544.0,\n",
-       " 'JUN': 148.16666666666666,\n",
-       " 'MAP3K14': 68.66666666666667,\n",
-       " 'MAPK14': 184.33333333333334,\n",
-       " 'MAPK8': 248.5,\n",
-       " 'MEF2A': 47.666666666666664,\n",
-       " 'MYC': 98.5,\n",
-       " 'NFE2L3': 176.33333333333334,\n",
-       " 'NFKB1': 78.83333333333333,\n",
-       " 'PARP12': 63.166666666666664,\n",
-       " 'POU2F1': 115.66666666666667,\n",
-       " 'RAP1GAP': 53.333333333333336,\n",
-       " 'RAPGEF1': 63.166666666666664,\n",
-       " 'RNF114': 101.0,\n",
-       " 'SMARCA5': 165.83333333333334,\n",
-       " 'SOCS1': 153.33333333333334,\n",
-       " 'SP100': 130.0,\n",
-       " 'SP110': 146.0,\n",
-       " 'STAT1': 426.8333333333333,\n",
-       " 'STAT2': 966.5,\n",
-       " 'STAT3': 62.666666666666664,\n",
-       " 'STAT4': 40.333333333333336,\n",
-       " 'STAT5A': 152.0,\n",
-       " 'STAT6': 232.83333333333334,\n",
-       " 'TRAFD1': 222.33333333333334,\n",
-       " 'TRIM21': 90.66666666666667,\n",
-       " 'TRIM22': 27.166666666666668,\n",
-       " 'TYK2': 1255.1666666666667,\n",
-       " 'UBA7': 93.33333333333333,\n",
-       " 'UBE2L6': 60.5,\n",
-       " 'USP18': 1515.3333333333333,\n",
-       " 'VAV1': 454.6666666666667,\n",
-       " 'ZBP1': 236.66666666666666,\n",
-       " 'ZNFX1': 70.0}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m         df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame\u001b[38;5;241m.\u001b[39mfrom_dict(DEGs[cell][pert], orient\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mindex\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m         df \u001b[38;5;241m=\u001b[39m df[df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpvals_adj\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m<\u001b[39m p_threshold]\n\u001b[0;32m----> 5\u001b[0m         \u001b[43mDEGs\u001b[49m\u001b[43m[\u001b[49m\u001b[43mcell\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43mpert\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m df\n\u001b[1;32m      8\u001b[0m avg_number_DEGs_pert_pert \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m p \u001b[38;5;129;01min\u001b[39;00m perts:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
@@ -1231,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1240,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1249,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1222,7 @@
        "DatasetDetails(path='/orcd/data/omarabu/001/Omnicell_datasets/satija_IFNB_raw/Seurat_IFNB.h5ad', folder_path='/orcd/data/omarabu/001/Omnicell_datasets/satija_IFNB_raw/', cell_key='cell_type', control='NT', pert_key='gene', var_names_key='gene', HVG=False, log1p_transformed=False, count_normalized=False, description='Some description of the dataset', pert_embeddings=['UCE_ESM2_Mean_Imputed', 'BioBERT'], cell_embeddings=[])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,17 +1233,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "dd = catalogue.get_dataset_details(\"satija_IFNB_raw\")\n",
-    "adata = sc.read(dd.path)\n"
+    "adata = sc.read(dd.path, backed = \"r+\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2336,7 +2300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3895,7 +3859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3919,7 +3883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3938,7 +3902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3954,7 +3918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4297,7 +4261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4641,7 +4605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4688,7 +4652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4715,7 +4679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4729,7 +4693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4739,7 +4703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4764,23 +4728,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_1 = adata[(adata.obs[dd.cell_key] == \"A549\") & (adata.obs[dd.pert_key] == 'IFNAR2')].X.mean(axis=0).A1\n",
+    "target_2 = adata[(adata.obs[dd.cell_key] == \"A549\") & (adata.obs[dd.pert_key] == 'STAT2')].X.mean(axis=0).A1\n",
+    "target_3 = adata[(adata.obs[dd.cell_key] == \"MCF7\") & (adata.obs[dd.pert_key] == 'BATF2')].X.mean(axis=0).A1\n",
+    "target_4 = adata[(adata.obs[dd.cell_key] == \"MCF7\") & (adata.obs[dd.pert_key] == 'MAP3K14')].X.mean(axis=0).A1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "np.savez(\"/orcd/data/omarabu/001/Omnicell_datasets/deepmind_tasks/task3_pert1_mean.npz\", target_1)\n",
+    "np.savez(\"/orcd/data/omarabu/001/Omnicell_datasets/deepmind_tasks/task3_pert2_mean.npz\", target_2)\n",
+    "np.savez(\"/orcd/data/omarabu/001/Omnicell_datasets/deepmind_tasks/task3_pert3_mean.npz\", target_3)\n",
+    "np.savez(\"/orcd/data/omarabu/001/Omnicell_datasets/deepmind_tasks/task3_pert4_mean.npz\", target_4)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "target_1 = np.load(\"/orcd/data/omarabu/001/Omnicell_datasets/deepmind_tasks/task3_pert1_mean.npz\", allow_pickle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_1[\"arr_0\"]\n",
+    "genes = np.load(\"/orcd/data/omarabu/001/Omnicell_datasets/deepmind_tasks/task1_train_genes.npz\", allow_pickle= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<228825x34025 sparse matrix of type '<class 'numpy.int64'>'\n",
-       "\twith 652268963 stored elements in COOrdinate format>"
+       "array(['TSPAN6', 'TNMD', 'DPM1', ..., 'AL360219.1', 'AL138966.2',\n",
+       "       'AC092634.8'], dtype='<U25')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train"
+    "genes[\"arr_0\"]"
    ]
   },
   {
