More stuff on scLambda ?

--- a/omnicell/notebooks/norman_sclambda_processing.ipynb
+++ b/omnicell/notebooks/norman_sclambda_processing.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -452,23 +452,399 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>guide_id</th>\n",
+       "      <th>read_count</th>\n",
+       "      <th>UMI_count</th>\n",
+       "      <th>coverage</th>\n",
+       "      <th>gemgroup</th>\n",
+       "      <th>good_coverage</th>\n",
+       "      <th>number_of_cells</th>\n",
+       "      <th>tissue_type</th>\n",
+       "      <th>cell_line</th>\n",
+       "      <th>cancer</th>\n",
+       "      <th>...</th>\n",
+       "      <th>pert</th>\n",
+       "      <th>split_hardest</th>\n",
+       "      <th>split_1</th>\n",
+       "      <th>split_2</th>\n",
+       "      <th>split_3</th>\n",
+       "      <th>split_4</th>\n",
+       "      <th>split_5</th>\n",
+       "      <th>split_6</th>\n",
+       "      <th>cond_harm</th>\n",
+       "      <th>phase</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ACTGATGGTCGCATCG-6</th>\n",
+       "      <td>NegCtrl11_NegCtrl0;NegCtrl11_NegCtrl0</td>\n",
+       "      <td>1225</td>\n",
+       "      <td>69</td>\n",
+       "      <td>17.753623</td>\n",
+       "      <td>6</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>cell_line</td>\n",
+       "      <td>K562</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>control</td>\n",
+       "      <td>valid</td>\n",
+       "      <td>valid</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>ctrl</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ACGAGCCAGGGATCTG-3</th>\n",
+       "      <td>NegCtrl10_NegCtrl0;NegCtrl10_NegCtrl0</td>\n",
+       "      <td>491</td>\n",
+       "      <td>36</td>\n",
+       "      <td>13.638889</td>\n",
+       "      <td>3</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>cell_line</td>\n",
+       "      <td>K562</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>control</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>valid</td>\n",
+       "      <td>train</td>\n",
+       "      <td>ctrl</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GACTACACACCATCCT-5</th>\n",
+       "      <td>NegCtrl0_NegCtrl0;NegCtrl0_NegCtrl0</td>\n",
+       "      <td>3247</td>\n",
+       "      <td>91</td>\n",
+       "      <td>35.681319</td>\n",
+       "      <td>5</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>cell_line</td>\n",
+       "      <td>K562</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>control</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>valid</td>\n",
+       "      <td>ctrl</td>\n",
+       "      <td>G1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CATTATCTCAGCTGGC-5</th>\n",
+       "      <td>NegCtrl10_NegCtrl0;NegCtrl10_NegCtrl0</td>\n",
+       "      <td>3727</td>\n",
+       "      <td>102</td>\n",
+       "      <td>36.539216</td>\n",
+       "      <td>5</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>cell_line</td>\n",
+       "      <td>K562</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>control</td>\n",
+       "      <td>train</td>\n",
+       "      <td>valid</td>\n",
+       "      <td>valid</td>\n",
+       "      <td>valid</td>\n",
+       "      <td>valid</td>\n",
+       "      <td>train</td>\n",
+       "      <td>valid</td>\n",
+       "      <td>ctrl</td>\n",
+       "      <td>G2M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GACGCGTAGTTTCCTT-1</th>\n",
+       "      <td>NegCtrl0_NegCtrl0;NegCtrl0_NegCtrl0</td>\n",
+       "      <td>1080</td>\n",
+       "      <td>50</td>\n",
+       "      <td>21.600000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>cell_line</td>\n",
+       "      <td>K562</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>control</td>\n",
+       "      <td>train</td>\n",
+       "      <td>valid</td>\n",
+       "      <td>valid</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>ctrl</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AGGGAGTGTAAGGGCT-1</th>\n",
+       "      <td>NegCtrl11_NegCtrl0;NegCtrl11_NegCtrl0</td>\n",
+       "      <td>865</td>\n",
+       "      <td>51</td>\n",
+       "      <td>16.960784</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>cell_line</td>\n",
+       "      <td>K562</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>control</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>valid</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>ctrl</td>\n",
+       "      <td>G1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AACACGTCAAGCGCTC-5</th>\n",
+       "      <td>NegCtrl10_NegCtrl0;NegCtrl10_NegCtrl0</td>\n",
+       "      <td>3093</td>\n",
+       "      <td>92</td>\n",
+       "      <td>33.619565</td>\n",
+       "      <td>5</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>cell_line</td>\n",
+       "      <td>K562</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>control</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>valid</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>valid</td>\n",
+       "      <td>ctrl</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AACGTTGAGATATGGT-6</th>\n",
+       "      <td>NegCtrl11_NegCtrl0;NegCtrl11_NegCtrl0</td>\n",
+       "      <td>677</td>\n",
+       "      <td>39</td>\n",
+       "      <td>17.358974</td>\n",
+       "      <td>6</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2</td>\n",
+       "      <td>cell_line</td>\n",
+       "      <td>K562</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>control</td>\n",
+       "      <td>train</td>\n",
+       "      <td>valid</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>ctrl</td>\n",
+       "      <td>G2M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CAGCTGGGTTAGTGGG-5</th>\n",
+       "      <td>NegCtrl11_NegCtrl0;NegCtrl11_NegCtrl0</td>\n",
+       "      <td>1699</td>\n",
+       "      <td>57</td>\n",
+       "      <td>29.807018</td>\n",
+       "      <td>5</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>cell_line</td>\n",
+       "      <td>K562</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>control</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>valid</td>\n",
+       "      <td>valid</td>\n",
+       "      <td>ctrl</td>\n",
+       "      <td>G2M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CTGTGCTAGGATCGCA-5</th>\n",
+       "      <td>NegCtrl0_NegCtrl0;NegCtrl0_NegCtrl0</td>\n",
+       "      <td>2199</td>\n",
+       "      <td>57</td>\n",
+       "      <td>38.578947</td>\n",
+       "      <td>5</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>cell_line</td>\n",
+       "      <td>K562</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>control</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>valid</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>train</td>\n",
+       "      <td>ctrl</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>11855 rows × 40 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([505.3013 , 548.81104, 524.11975, ..., 518.67725, 522.4599 ,\n",
-       "       487.668  ], dtype=float32)"
+       "                                                 guide_id  read_count  \\\n",
+       "ACTGATGGTCGCATCG-6  NegCtrl11_NegCtrl0;NegCtrl11_NegCtrl0        1225   \n",
+       "ACGAGCCAGGGATCTG-3  NegCtrl10_NegCtrl0;NegCtrl10_NegCtrl0         491   \n",
+       "GACTACACACCATCCT-5    NegCtrl0_NegCtrl0;NegCtrl0_NegCtrl0        3247   \n",
+       "CATTATCTCAGCTGGC-5  NegCtrl10_NegCtrl0;NegCtrl10_NegCtrl0        3727   \n",
+       "GACGCGTAGTTTCCTT-1    NegCtrl0_NegCtrl0;NegCtrl0_NegCtrl0        1080   \n",
+       "...                                                   ...         ...   \n",
+       "AGGGAGTGTAAGGGCT-1  NegCtrl11_NegCtrl0;NegCtrl11_NegCtrl0         865   \n",
+       "AACACGTCAAGCGCTC-5  NegCtrl10_NegCtrl0;NegCtrl10_NegCtrl0        3093   \n",
+       "AACGTTGAGATATGGT-6  NegCtrl11_NegCtrl0;NegCtrl11_NegCtrl0         677   \n",
+       "CAGCTGGGTTAGTGGG-5  NegCtrl11_NegCtrl0;NegCtrl11_NegCtrl0        1699   \n",
+       "CTGTGCTAGGATCGCA-5    NegCtrl0_NegCtrl0;NegCtrl0_NegCtrl0        2199   \n",
+       "\n",
+       "                    UMI_count   coverage  gemgroup  good_coverage  \\\n",
+       "ACTGATGGTCGCATCG-6         69  17.753623         6           True   \n",
+       "ACGAGCCAGGGATCTG-3         36  13.638889         3           True   \n",
+       "GACTACACACCATCCT-5         91  35.681319         5           True   \n",
+       "CATTATCTCAGCTGGC-5        102  36.539216         5           True   \n",
+       "GACGCGTAGTTTCCTT-1         50  21.600000         1           True   \n",
+       "...                       ...        ...       ...            ...   \n",
+       "AGGGAGTGTAAGGGCT-1         51  16.960784         1           True   \n",
+       "AACACGTCAAGCGCTC-5         92  33.619565         5           True   \n",
+       "AACGTTGAGATATGGT-6         39  17.358974         6           True   \n",
+       "CAGCTGGGTTAGTGGG-5         57  29.807018         5           True   \n",
+       "CTGTGCTAGGATCGCA-5         57  38.578947         5           True   \n",
+       "\n",
+       "                    number_of_cells tissue_type cell_line  cancer  ...  \\\n",
+       "ACTGATGGTCGCATCG-6                1   cell_line      K562    True  ...   \n",
+       "ACGAGCCAGGGATCTG-3                1   cell_line      K562    True  ...   \n",
+       "GACTACACACCATCCT-5                1   cell_line      K562    True  ...   \n",
+       "CATTATCTCAGCTGGC-5                1   cell_line      K562    True  ...   \n",
+       "GACGCGTAGTTTCCTT-1                1   cell_line      K562    True  ...   \n",
+       "...                             ...         ...       ...     ...  ...   \n",
+       "AGGGAGTGTAAGGGCT-1                1   cell_line      K562    True  ...   \n",
+       "AACACGTCAAGCGCTC-5                1   cell_line      K562    True  ...   \n",
+       "AACGTTGAGATATGGT-6                2   cell_line      K562    True  ...   \n",
+       "CAGCTGGGTTAGTGGG-5                1   cell_line      K562    True  ...   \n",
+       "CTGTGCTAGGATCGCA-5                1   cell_line      K562    True  ...   \n",
+       "\n",
+       "                       pert split_hardest split_1 split_2 split_3  split_4  \\\n",
+       "ACTGATGGTCGCATCG-6  control         valid   valid   train   train    train   \n",
+       "ACGAGCCAGGGATCTG-3  control         train   train   train   train    train   \n",
+       "GACTACACACCATCCT-5  control         train   train   train   train    train   \n",
+       "CATTATCTCAGCTGGC-5  control         train   valid   valid   valid    valid   \n",
+       "GACGCGTAGTTTCCTT-1  control         train   valid   valid   train    train   \n",
+       "...                     ...           ...     ...     ...     ...      ...   \n",
+       "AGGGAGTGTAAGGGCT-1  control         train   train   valid   train    train   \n",
+       "AACACGTCAAGCGCTC-5  control         train   train   valid   train    train   \n",
+       "AACGTTGAGATATGGT-6  control         train   valid   train   train    train   \n",
+       "CAGCTGGGTTAGTGGG-5  control         train   train   train   train    train   \n",
+       "CTGTGCTAGGATCGCA-5  control         train   train   valid   train    train   \n",
+       "\n",
+       "                    split_5  split_6  cond_harm  phase  \n",
+       "ACTGATGGTCGCATCG-6    train    train       ctrl      S  \n",
+       "ACGAGCCAGGGATCTG-3    valid    train       ctrl      S  \n",
+       "GACTACACACCATCCT-5    train    valid       ctrl     G1  \n",
+       "CATTATCTCAGCTGGC-5    train    valid       ctrl    G2M  \n",
+       "GACGCGTAGTTTCCTT-1    train    train       ctrl      S  \n",
+       "...                     ...      ...        ...    ...  \n",
+       "AGGGAGTGTAAGGGCT-1    train    train       ctrl     G1  \n",
+       "AACACGTCAAGCGCTC-5    train    valid       ctrl      S  \n",
+       "AACGTTGAGATATGGT-6    train    train       ctrl    G2M  \n",
+       "CAGCTGGGTTAGTGGG-5    valid    valid       ctrl    G2M  \n",
+       "CTGTGCTAGGATCGCA-5    train    train       ctrl      S  \n",
+       "\n",
+       "[11855 rows x 40 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "adata.X.sum(axis = 1 )"
+    "adata.obs[adata.obs[\"cond_harm\"] == 'ctrl']"
    ]
   },
   {
