--- a/omnicell/notebooks/satija_full.ipynb
+++ b/omnicell/notebooks/satija_full.ipynb
@@ -11,35 +11,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = sc.read('/orcd/archive/abugoot/001/Projects/dlesman/datasets/Seurat_IFNB.h5ad')"
+    "adata = sc.read('/orcd/data/omarabu/001/Omnicell_datasets/satija_IFNB_raw/Seurat_IFNB.h5ad', backed=\"r+\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['1', '2', '3', '4', '5', '6', '7', '8', '9', '10',\n",
-       "       ...\n",
-       "       '34016', '34017', '34018', '34019', '34020', '34021', '34022', '34023',\n",
-       "       '34024', '34025'],\n",
-       "      dtype='object', length=34025)"
+       "['A549', 'BXPC3', 'HAP1', 'HT29', 'K562', 'MCF7']\n",
+       "Categories (6, object): ['A549', 'BXPC3', 'HAP1', 'HT29', 'K562', 'MCF7']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "adata.var_names"
+    "adata.obs[\"cell_type\"].unique()"
    ]
   },
   {
@@ -52,9 +49,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "omnicell",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
