Unfucking the branch

--- a/omnicell/notebooks/satija_full.ipynb
+++ b/omnicell/notebooks/satija_full.ipynb
@@ -11,32 +11,88 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata = sc.read('/orcd/data/omarabu/001/Omnicell_datasets/satija_IFNB_raw/Seurat_IFNB.h5ad')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = sc.read('/orcd/data/omarabu/001/Omnicell_datasets/satija_IFNB_raw/Seurat_IFNB.h5ad', backed=\"r+\")"
+    "adata.var_names = adata.var['gene']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['TSPAN6', 'TNMD', 'DPM1', 'SCYL3', 'C1orf112', 'FGR', 'CFH', 'FUCA2',\n",
+       "       'GCLC', 'NFYA',\n",
+       "       ...\n",
+       "       'AL133371.3', 'AC091304.3', 'NOS2P1', 'RN7SL376P', 'AC008622.1',\n",
+       "       'AP006545.2', 'AL359198.1', 'AL360219.1', 'AL138966.2', 'AC092634.8'],\n",
+       "      dtype='object', name='gene', length=34025)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adata.var_names"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata.write('/orcd/data/omarabu/001/Omnicell_datasets/satija_IFNB_raw/Seurat_IFNB.h5ad', compression='gzip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata = sc.read('/orcd/data/omarabu/001/Omnicell_datasets/satija_IFNB_raw/Seurat_IFNB.h5ad')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['A549', 'BXPC3', 'HAP1', 'HT29', 'K562', 'MCF7']\n",
-       "Categories (6, object): ['A549', 'BXPC3', 'HAP1', 'HT29', 'K562', 'MCF7']"
+       "Index(['TSPAN6', 'TNMD', 'DPM1', 'SCYL3', 'C1orf112', 'FGR', 'CFH', 'FUCA2',\n",
+       "       'GCLC', 'NFYA',\n",
+       "       ...\n",
+       "       'AL133371.3', 'AC091304.3', 'NOS2P1', 'RN7SL376P', 'AC008622.1',\n",
+       "       'AP006545.2', 'AL359198.1', 'AL360219.1', 'AL138966.2', 'AC092634.8'],\n",
+       "      dtype='object', name='gene', length=34025)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "adata.obs[\"cell_type\"].unique()"
+    "adata.var_names"
    ]
   },
   {
