giignore on h5ad files

--- a/omnicell/notebooks/test_HVG.ipynb
+++ b/omnicell/notebooks/test_HVG.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -37,18 +37,42 @@
        "    var: 'gene'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "adata\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AnnData object with n_obs × n_vars = 328542 × 34025\n",
+       "    obs: 'orig.ident', 'nCount_RNA', 'nFeature_RNA', 'sample', 'bc1_well', 'bc2_well', 'bc3_well', 'percent.mito', 'cell_type', 'pathway', 'RNA_snn_res.0.9', 'seurat_clusters', 'sample_ID', 'Batch_info', 'guide', 'gene', 'mixscale_score'\n",
+       "    var: 'gene'\n",
+       "    obsm: 'embedding'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adata.obsm[\"embedding\"] = adata.X\n",
     "adata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,37 +81,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata_hvg = adata[:, adata.var.highly_variable]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AnnData object with n_obs × n_vars = 328542 × 34025\n",
-       "    obs: 'orig.ident', 'nCount_RNA', 'nFeature_RNA', 'sample', 'bc1_well', 'bc2_well', 'bc3_well', 'percent.mito', 'cell_type', 'pathway', 'RNA_snn_res.0.9', 'seurat_clusters', 'sample_ID', 'Batch_info', 'guide', 'gene', 'mixscale_score'\n",
-       "    var: 'gene', 'highly_variable', 'highly_variable_rank', 'means', 'variances', 'variances_norm'\n",
-       "    uns: 'hvg'"
+       "<328542x34025 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 980979021 stored elements in Compressed Sparse Column format>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "adata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata.var.highly_variable.sum()\n",
-    "\n",
-    "#We keep only highly variable columns\n",
-    "adata = adata[:, adata.var.highly_variable]\n"
+    "adata_hvg.obsm[\"embedding\"]\n",
+    "#We keep only highly variable columns\n"
    ]
   },
   {
